--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -57,3 +57,11 @@ config:
     jwt-signkey: jmworksJwtSecret
   swagger:
     enabled: true
+
+s3:
+  endpoint: https://msa2-minio.k8s.kpaasta.io
+  accessKey: JMWorks
+  secretKey: JMWorksSecret
+  bucket: bucket-download
+
+
