--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,9 @@ dependencies {
     implementation 'de.codecentric:spring-boot-admin-starter-client'
     implementation 'org.springframework.cloud:spring-cloud-starter-config'
 
+    implementation platform('com.amazonaws:aws-java-sdk-bom:1.11.815')
+    implementation 'com.amazonaws:aws-java-sdk-s3'
+
     compile group: 'org.json', name: 'json', version: '20200518'
     compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
     compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
