--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,3 +13,13 @@ services:
     command: mysqld --character-set-server=utf8 --collation-server=utf8_unicode_ci
     volumes:
       - ./data:/var/lib/mysql
+
+  msa-rabbitmq:
+    image: rabbitmq:3.8.5-management
+    environment:
+      RABBITMQ_ERLANG_COOKIE: 'secretCookie'
+      RABBITMQ_DEFAULT_USER: admin
+      RABBITMQ_DEFAULT_PASS: 'adminSecret'
+    ports:
+    - 5672:5672
+    - 15672:15672
