--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -21,6 +21,11 @@ spring:
 spring:
   profiles: local
 
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
+
   rabbitmq:
     host: localhost
     port: 5672
@@ -85,6 +90,7 @@ config:
 
 s3:
   endpoint: https://msa2-minio.k8s.kpaasta.io
+  public: https://msa2-minio.k8s.kpaasta.io
   accessKey: JMWorks
   secretKey: JMWorksSecret
   bucket: bucket-download
